refactor: re-initialize swagger
