# docs/swagger.yaml
@@ -113,39 +113,6 @@ paths:
       summary: Upload User Image
       tags:
       - account
-  /account/create_link_tree_url:
-    get:
-      consumes:
-      - application/json
-      description: create link tree url
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controllers.SuccessResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controllers.ErrResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/controllers.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controllers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controllers.ErrResponse'
-      security:
-      - basic: []
-      summary: create link tree url
-      tags:
-      - account
   /account/delete_account:
     delete:
       consumes:
